2장 코틀린 기초

--- a/Notes/1.What is Kotlin.md
+++ b/Notes/1.What is Kotlin.md
@@ -51,10 +51,10 @@
   
 예를 들어, 컬렉션에서 어떤 조건을 만족하는 원소를 찾는 비슷한 두개의 코드 조각이 있다고 가정해보자. 하지만 그 두 코드 조각은 일부 세부 사항에서 차이가 난다. 예를 들어 만족시켜야 하는 조건이 조금 다르다고 하자. 이 로직에서 공통부분을 따로 함수로 뽑아내고 서로 다른 세부 사항을 인자로 전달할 수 있다. 이런 인자는 그 자체가 함수다. 하지만 람다 식(lambda expression)이라 불리는 무명 함수(anonymous function) 구문을 사용하면 간결하게 그런 함수를 표현할 수 있다.  
 
-둘째, 다중 스레드를 사용해도 안전(safe multithreading)하다는 사실이다.  
+**둘째, 다중 스레드를 사용해도 안전(safe multithreading)하다는 사실이다.**  
 다중 스레드 프로그램에서는 적절한 동기화 없이 같은 데이터를 여러 스레드가 변경하는 경우 많은 문제가 생긴다. 불변 데이터 구조를 사용하고 순수 함수를 그 데이터 구조에 적용한다면 다중 스레드 환경에서 같은 데이터를 여러 스레드가 변경할 수 없다. 따라서 복잡한 동기화를 적용하지 않아도 된다.  
 
-마지막으로, 함수형 프로그램은 테스트하기 쉽다.  
+**마지막으로, 함수형 프로그램은 테스트하기 쉽다.**  
 부수 효과가 있는 함수는 그 함수를 실행할 때 필요한 전체 환경을 구성하는 준비 코드(setup code)가 따로 필요하지만, 순수 함수는 그런 준비 코드 없이 독립적으로 테스트할 수 있다.  
 
 ### 코틀린은 처음부터 함수형 프로그래밍을 풍부하게 지원해 왔다.
